[project]
name = "broadcast"
version = "0.1.0"
description = "Turn a blog post into platform-native content — X Articles, LinkedIn posts — from one CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "broadcast-cli",
    "broadcast-mcp",
]

# Virtual workspace root: `uv sync` installs the CLI and MCP apps (and,
# transitively, core) as editable workspace members. Not itself a package.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[tool.uv.sources]
broadcast-cli = { workspace = true }
broadcast-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
