[project]
name = "broadcast-cli"
version = "0.1.0"
description = "broadcast: the command line (init, import, set, x, linkedin, generate)"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "broadcast-core",
]

[project.scripts]
broadcast = "broadcast.cli:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "broadcast.cli"

[tool.uv.sources]
broadcast-core = { workspace = true }
