[project]
name = "broadcast-core"
version = "0.1.0"
description = "broadcast core: encrypted secret store, gpg crypto, and the tsx step runner"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "broadcast.core"
